@@ -155,6 +155,9 @@ Unreleased changes (0.9-dev)
 
 52. NUTCH-167 - Observation of robots "noarchive" directive. (ab)
 
+53. NUTCH-384 - Protocol-file plugin does not allow the parse plugins
+    framework to operate properly (Heiko Dietze via mattmann)
+
 
 Release 0.8 - 2006-07-25
 
